<resources>
    <string name="app_name">AstroWeather</string>
    <string name="action_settings">Settings</string>
    <string name="title_sun">Sun</string>
    <string name="title_sunrise_time">Sunrise Time</string>
    <string name="title_sunrise_azimuth">Sunrise Azimuth</string>
    <string name="title_sunset_time">Sunset Time</string>
    <string name="title_sunset_azimuth">Sunset Azimuth</string>
    <string name="title_twilight_morning">Twilight Morning Time</string>
    <string name="title_twilight_evening">Twilight Evening Time</string>
    <string name="title_moon">Moon</string>
    <string name="title_moonrise_time">Moonrise Time</string>
    <string name="title_synodic_day">Day of the Synodic Month</string>
    <string name="title_moonset_time">Moonset Time</string>
    <string name="title_new_moon">Next New Moon</string>
    <string name="title_full_moon">Next Full Moon</string>
    <string name="title_moon_illumination">Moon Illumination [%]</string>
    <string name="title_latitude">Latitude</string>
    <string name="title_longitude">Longitude</string>
    <string name="title_refreshrate">Refresh rate (in seconds)</string>
    <string name="button_proceed">Proceed</string>

    <string name="title_temperature">Temperature</string>
    <string name="title_pressure">Pressure</string>
    <string name="title_humidity">Humidity</string>
    <string name="title_forecast">3-Day Forecast</string>
    <string name="title_current">Current Weather</string>

    <string name="Celsius">Celsius</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="weather_forecast">Add Favourite Location</string>
    <string name="title_city">City</string>
    <string name="title_country">Country</string>

    <string name="select">Select</string>
    <string name="add_favourite">Add New Location</string>
    <string name="refresh">Refresh</string>
</resources>
